rename api methods. add new api methods
