# src/main/resources/api/api.yml
@@ -14,13 +14,13 @@ servers:
 paths:
   /orders/create:
     post:
-      operationId: placeOrder
+      operationId: createOrder
       summary: >-
-        place new order.
+        create new order.
       tags:
         - order
       requestBody:
-        description: send reuest body
+        description: send request body
         required: true
         content:
           application/json:
@@ -47,7 +47,7 @@ paths:
       tags:
         - order
       requestBody:
-        description: send reuest body
+        description: send request body
         required: true
         content:
           application/json:
@@ -88,6 +88,33 @@ paths:
           description: Forbidden.
         "503":
           description: Error calling service.
+    patch:
+        summary: >-
+          change order order.
+        tags:
+          - order
+        requestBody:
+          description: send request body
+          required: true
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Order"
+        parameters:
+          - $ref: '#/components/parameters/orderId'
+        responses:
+          "200":
+            description: OK
+            content:
+              application/json:
+                schema:
+                  $ref: "#/components/schemas/Order"
+          "401":
+            description: Unauthorized.
+          "403":
+            description: Forbidden.
+          "503":
+            description: Error calling service.
   /accounts/create:
     post:
       operationId: createAccount
@@ -96,7 +123,7 @@ paths:
       tags:
         - account
       requestBody:
-        description: send reuest body
+        description: send request body
         required: true
         content:
           application/json:
@@ -123,7 +150,7 @@ paths:
       tags:
         - account
       requestBody:
-        description: send reuest body
+        description: send request body
         required: true
         content:
           application/json:
@@ -151,6 +178,34 @@ paths:
         - account
       parameters:
         - $ref: '#/components/parameters/accountId'
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Account"
+        "401":
+          description: Unauthorized.
+        "403":
+          description: Forbidden.
+        "503":
+          description: Error calling service.
+    patch:
+      operationId: updateAccountStatus
+      summary: >-
+        change account status.
+      tags:
+        - account
+      parameters:
+        - $ref: '#/components/parameters/accountId'
+      requestBody:
+        description: send request body
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Account"
       responses:
         "200":
           description: OK
